118627: fix alignment issues

--- a/src/app/shared/form/form.component.scss
+++ b/src/app/shared/form/form.component.scss
@@ -51,3 +51,8 @@ button.ds-form-add-more:focus {
 select.form-control {
   appearance: auto;
 }
+
+.col-sm-6, .col-sm-12 {
+  padding-left: 15px;
+  padding-right: 15px;
+}
